# quake2

./: CMakeLists.txt  build.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/Quake2/Android/: treasure_hunt_jni.cc
src/main/Quake2/OpenGLES/: EGLWrapper.c  EGLWrapper.h  OpenGLWrapper.h
src/main/Quake2/Sources/backends/android/: audio_android.c  input_android.c  system_android.c
src/main/Quake2/Sources/backends/unix/: system_linux.c
src/main/Quake2/Sources/client/menu/: menu_video.c
src/main/Quake2/Sources/client/refresh/: r_main.c  r_private.h
src/main/Quake2/Sources/common/: common.h  misc.c
src/main/Quake2/Sources/common/shared/: shared.h
src/main/Quake2/Sources/common/unzip/: unzip.c
src/main/Quake2/Sources/game/savegame/: savegame.c
src/main/Quake2/zlib/contrib/minizip/: miniunz.c.bak
src/main/java/org/echoline/quake2/: MainActivity.java
src/main/jni/: treasure_hunt_jni.cc
src/main/res/values/: strings.xml
